BPOR/BPOR.Rms/wwwroot/css/bpor.css
.govuk-header {
    background-color: unset;
    flex-direction: column;
    margin-top: 0.5em;
    padding-left: 1em;
    padding-right: 1em;
}

.govuk-header__container {
    height: unset;
}

.govuk-phase-banner {
    border-bottom: unset;
    padding-top: 20px;
    padding-bottom: 20px;
}

#NHSLogo {
    height: 45px;
    margin: 30px;
    position: relative;
    width: 112.5px;
}

.govuk-phase-banner__content__tag {
    display: inline-block;
    outline: transparent solid 2px;
    outline-offset: -2px;
    color: rgb(255, 255, 255);
    background-color: rgb(29, 112, 184);
    letter-spacing: 1px;
    text-decoration: none;
    text-transform: uppercase;
    font-family: "GDS Transport", arial, sans-serif;
    font-weight: 700;
    line-height: 1;
    padding: 5px 8px 4px;
    margin-right: 10px;
}

.header-user-info {
    color: #193E72;
}

.header-user-info .govuk-link.sign-out-nav__link,
.header-user-info .govuk-link.sign-out-nav__link:visited {
    color: #193E72;
}

.social-container, 
.social-container-header {
    font-stretch: normal;
    color: #212b32;
    font-size: 16px;
    line-height: 1.5;
    font-family: Lato, sans-serif !important;
    box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
}

.social-container {
    margin: 0;
    flex-grow: 0;
    max-width: 100%;
    flex-basis: 100%;
}

.social-container-header {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    align-content: center;
    background-color: rgb(14, 46, 90);
    padding: 1em;
}

@media (min-width: 960px) {
    .social-container {
        max-width: 33.333333%;
        flex-basis: 33.333333%;
    }
    .social-container-header {
        justify-content: flex-end;
    }
}



.social-title {
    font-stretch: normal;
    line-height: 1.5;
    box-sizing: inherit;
    color: rgb(255, 255, 255);
    font-size: 1em;
    margin-right: 1.2em;
    font-weight: 900;
    margin-left: 4em;
}

.social-link,
.social-link:focus,
.social-link:hover {
    --space: 2em 0;
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    text-underline-offset: 0.1578em;
    width: 3em;
    padding: 0.2em;
    display: inline-block;
    text-align: center;
    border: 3px solid rgb(14, 46, 90);
    box-sizing: inherit;
}

.social-link {
    text-decoration: underline;
    text-decoration-thickness: max(1px, .0625rem);
    color: #1d70b8;
}

.social-link:focus,
.social-link:hover {
    text-decoration: none;
    color: #212b32;
    outline: 4px solid transparent;
    border-color: rgb(254, 212, 122);
    box-shadow: none;
    background-color: rgb(14, 46, 90);
}

.social-icon {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    text-underline-offset: 0.1578em;
    text-align: center;
    color: #1d70b8;
    box-sizing: inherit;
    width: 2em;
    height: 2em;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background-color: rgb(255, 255, 255);
    border-radius: 50%;
}


.social-icon {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    text-underline-offset: 0.1578em;
    text-align: center;
    color: #1d70b8;
    box-sizing: inherit;
    width: 2em;
    height: 2em;
    display: inline-flex;
    -webkit-box-align: center;
    align-items: center;
    -webkit-box-pack: center;
    justify-content: center;
    background-color: rgb(255, 255, 255);
    border-radius: 50%;
}

.social-svg {
    font-stretch: normal;
    text-underline-offset: 0.1578em;
    text-align: center;
    display: var(--fa-display, inline-block);
    font-size: 0.75em;
    line-height: 0.0833333337em;
    color: rgb(25, 62, 114);
    background-color: rgb(255, 255, 255);
    width: 1.4em;
    height: 1.4em;
    vertical-align: 0em;
    overflow: visible;
    box-sizing: content-box;
}

.link-container {
    font-stretch: normal;
    color: #212b32;
    font-size: 16px;
    line-height: 1.5;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    box-sizing: border-box;
    align-content: center;
    justify-content: center;
    background-color: rgb(25, 62, 114);
}

.link-columns-container {
    font-stretch: normal;
    color: #212b32;
    font-size: 16px;
    line-height: 1.5;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    margin: 0;
    box-sizing: border-box;
    align-content: center;
    flex-grow: 0;
    max-width: 83.333333%;
    flex-basis: 83.333333%;
}

.link-title {
    font-stretch: normal;
    color: #212b32;
    box-sizing: inherit;
    display: block;
    font-weight: 600;
    font-size: 2rem;
    line-height: 1.25;
    position: absolute;
    width: 1px;
    height: 1px;
    margin: 0px;
    padding: 0px;
    overflow: hidden;
    clip: rect(0px, 0px, 0px, 0px);
    clip-path: inset(50%);
    border: 0px;
    white-space: nowrap;
}

.link-column-list-container {
    flex-grow: 0;
    max-width: 100%;
    flex-basis: 100%;
    font-stretch: normal;
    color: #212b32;
    font-size: 16px;
    line-height: 1.5;
    margin: 0;
    box-sizing: border-box;
}

.link-list-container {
    font-stretch: normal;
    color: #212b32;
    font-size: 16px;
    line-height: 1.5;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
}

.link-list {
    font-stretch: normal;
    color: #212b32;
    font-size: 16px;
    line-height: 1.5;
    margin: 0;
    box-sizing: border-box;
    flex-grow: 0;
    max-width: 100%;
    flex-basis: 100%;
}

.link-header {
    font-stretch: normal;
    box-sizing: inherit;
    display: block;
    line-height: 1.33333;
    padding-left: 40px;
    font-size: 1rem;
    margin-top: 1.2em;
    margin-bottom: 1em;
    font-weight: 900;
    color: white;
}

.footer-link-ul {
    font-stretch: normal;
    color: #212b32;
    box-sizing: inherit;
    margin-top: 0;
    font-size: 1.1875rem;
    line-height: 1.47368;
    margin-bottom: 24px;
    list-style-type: disc;
    padding-left: 40px;
}

.footer-link-li {


    font-stretch: normal;

    color: #212b32;
    line-height: 1.47368;
    box-sizing: inherit;

    margin: 2px 0px 0px;
    font-size: 0.8rem;
    font-weight: 400;
    position: relative;
    list-style: none;
    padding-bottom: 0.5em;
}


.footer-link-li-a {
    font-stretch: normal;
    line-height: 1.47368;
    font-size: 0.8rem;
    font-weight: 400;
    list-style: none;
    box-sizing: inherit;
    text-decoration: underline;
    text-decoration-thickness: max(1px, .0625rem);
    text-underline-offset: 2.5px;
    padding-left: 0px;
    padding-right: 0px;
    cursor: pointer;
    text-decoration-color: rgb(255, 255, 255);
    color: rgb(255, 255, 255);
}

.footer-link-li-a:visited {
    font-stretch: normal;
    line-height: 1.47368;
    font-size: 0.8rem;
    font-weight: 400;
    list-style: none;
    box-sizing: inherit;
    text-decoration: underline;
    text-decoration-thickness: max(1px, .0625rem);
    text-underline-offset: 2.5px;
    padding-left: 0px;
    padding-right: 0px;
    cursor: pointer;
    text-decoration-color: rgb(255, 255, 255);
    color: rgb(255, 255, 255);
}


.footer-link-li-a:hover {
    color: rgb(255, 255, 255);
    text-decoration-color: rgb(255, 255, 255);
    text-decoration-line: underline;
    text-decoration-thickness: max(3px, 0.1875rem, 0.12em);
}


.footer-link-li-a:focus {
        color: rgb(25, 62, 114);
        text-decoration: none;
        background-color: rgb(254, 212, 122);
        box-shadow: rgb(254, 212, 122) 0px -2px, rgb(33, 43, 50) 0px 4px;
}

.link-bpor {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    box-sizing: inherit;
    text-decoration: underline;
    text-decoration-thickness: max(1px, .0625rem);
    text-underline-offset: 0.1578em;
    border: 3px solid rgb(25, 62, 114);
    display: block;
    padding: 0.2em;
    color: #330072;
}

.link-bpor-a {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    box-sizing: inherit;
    text-decoration: underline;
    text-decoration-thickness: max(1px, .0625rem);
    text-underline-offset: 0.1578em;
    border: 3px solid rgb(25, 62, 114);
    display: block;
    padding: 0.2em;
    color: #330072;
}

.link-bpor-a:focus, .link-bpor-a:hover {
    background-color: rgb(25, 62, 114);
    border-color: rgb(254, 212, 122);
    box-shadow: none;
}

.link-bpor-img {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    text-underline-offset: 0.1578em;
    color: #330072;
    box-sizing: inherit;
    max-height: 200px;
    padding: 2.2rem;
    max-width: 100%;
    width: 100%;
}


.footer-image-wrapper {
    font-stretch: normal;
    color: #212b32;
    font-size: 16px;
    line-height: 1.5;
    box-sizing: inherit;
    display: flex;
    flex-wrap: wrap;
    margin: auto;
    max-width: 90%;
    padding: 5px;
}

.regional-logos {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    text-underline-offset: 0.1578em;
    color: #1d70b8;
    box-sizing: inherit;
    font-family: Lato, sans-serif !important;
    margin: auto;
    max-width: 100%;
}

.footerImage {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    box-sizing: inherit;
    text-decoration: underline;
    text-decoration-thickness: max(1px, .0625rem);
    text-underline-offset: 0.1578em;
    width: 78%;
    border: 3px solid #fff;
    display: block;
    color: #1d70b8;
}

.footerImage:focus, .footerImage:hover {
    background-color: #fff;
    border-color: #fed47a;
    box-shadow: none;
    box-shadow: 0 0 3px 3px rgba(0, 0, 0, .75);
}

.img-responsive {
    font-stretch: normal;
    font-size: 16px;
    line-height: 1.5;
    text-underline-offset: 0.1578em;
    color: #1d70b8;
    box-sizing: inherit;
    width: 100%;
    margin: auto;
    max-width: 100%;
}

.NI-logo-link {
    width: 78%;
}

.NI-logo {
    flex: 0 0 18%;
    left: 2%;
}

.nihr-image {
    flex: 0 0 35%;
}


.Scot-logo {
    display: flex;
    flex: 0 0 20%;
    justify-content: center;
    left: 4%;
}


.scot-logo-img {
    width: 65%;
}

.HCW-logo {
    flex: 0 0 20%;
}

.HCWLogoContainer {
    width: 90%;
}

@media (min-width: 960px) {
    .link-column-list-container {
        flex-grow: 0;
        max-width: 16.666667%;
        flex-basis: 16.666667%;
    }
}

@media(max-width: 767px) {
    .regional-logos {
        display: block;
        width: 65%;
    }

    .footer-image-wrapper {
        color: #212b32;
        font-size: 16px;
        line-height: 1.5;
        display: flex;
        flex-wrap: wrap;
        margin: auto;
        max-width: 90%;
        padding: 5px;
    }
}


@media only screen and (max-width: 900px) {
    .nihr-image {
        flex: 0 0 55%;
        padding-right: 5px;
    }
    .NI-logo {
        flex: 0 0 30%;
    }
    #NihrLogo {
        width: 90%;
    }
    .Scot-logo {
        display: flex;
        flex: 0 0 40%;
        justify-content: center;
        left: 4%;
    }
    .HCW-logo {
        flex: 0 0 40%;
    }
}

